Add Glyn Nelson images after getting the go ahead on flikrmail

--- a/notebooks/1 - Image Acquisition and Processing.ipynb
+++ b/notebooks/1 - Image Acquisition and Processing.ipynb
@@ -69,6 +69,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## General\n",
+    "\n",
+    "https://arstechnica.com/science/2018/08/minigame-integrated-into-eve-online-helps-scientists-understand-cells/\n",
+    "\n",
+    "https://keras.io/api/preprocessing/image/\n",
+    "\n",
+    "https://www.breakingbayes.com/2017/08/29/designing-a-cnn-preprocessing-architecture-and-parameters/\n",
+    "\n",
+    "https://towardsdatascience.com/boost-your-cnn-image-classifier-performance-with-progressive-resizing-in-keras-a7d96da06e20\n",
+    "\n",
+    "Yim, J., & Sohn, K. A. (2017, November). Enhancing the performance of convolutional neural networks on quality degraded datasets. In 2017 International Conference on Digital Image Computing: Techniques and Applications (DICTA) (pp. 1-8). IEEE.\n",
+    "\n",
+    "Janke, J., Castelli, M., & Popovič, A. (2019). Analysis of the proficiency of fully connected neural networks in the process of classifying digital images. Benchmark of different classification algorithms on high-level image features from convolutional layers. Expert Systems with Applications, 135, 12-38.\n",
+    "\n",
+    "Hossain, M. T., Teng, S. W., Zhang, D., Lim, S., & Lu, G. (2019, September). Distortion robust image classification using deep convolutional neural network with discrete cosine transform. In 2019 IEEE International Conference on Image Processing (ICIP) (pp. 659-663). IEEE.\n",
+    "\n",
+    "Yim, J., Kim, J. J., & Shin, D. (2018). One-shot item search with multimodal data. arXiv preprint arXiv:1811.10969.\n",
+    "\n",
+    "Seals, M. (2019). On the Robustness of Object Detection Based Deep Learning Models."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
